
-------------------------------------------------------------------------------

Fri Oct  1 19:44:55 PDT 1999
(Raster)

chaneg abotu text a little

-------------------------------------------------------------------------------

Sat Oct  2 11:59:40 PDT 1999
(Mandrake)

edited some documentation, also fixed a minor typo in menus.cfg

-------------------------------------------------------------------------------

Sat Oct  2 14:05:27 PDT 1999
(Mandrake)

having the logout dialog autoarrange looked kind of bad - so I have this one
centered again in session.c

-------------------------------------------------------------------------------

Sat Oct  2 16:08:43 PDT 1999
(Mandrake)

changed it to where the first dialog that pops up pops up centered, and
subsequent dialogs pop up in an auto-arranged format.

-------------------------------------------------------------------------------

Sat Oct  2 17:25:12 PDT 1999
(Raster)

several patches (group break if members of group of screen patch plue some
xmms behavior patches)
:)

-------------------------------------------------------------------------------

Sat Oct  2 17:27:31 PDT 1999
(Raster)


add dialog to explain pagers and iconboxes arent part of a group... :)

-------------------------------------------------------------------------------

Sat Oct  2 17:28:58 PDT 1999
(Raster)

damn.. fix that \" :)

-------------------------------------------------------------------------------

Sat Oct  2 18:04:57 PDT 1999
(Raster)

fix "saying no to logout dialog stops windows form being de-iconified"

-------------------------------------------------------------------------------

Sat Oct  2 18:08:37 PDT 1999
(Raster)

get rid of warning

-------------------------------------------------------------------------------

Sat Oct  2 18:11:31 PDT 1999
(Raster)

rtemove reply from ipc iclass apply - more efficient - this WILL break eterm
automode (well it will braak eterm) until eterm is updated :)
sorry kainx  :)