@@ -2819,3 +2819,11 @@ Sat Oct  2 18:11:31 PDT 1999
 rtemove reply from ipc iclass apply - more efficient - this WILL break eterm
 automode (well it will braak eterm) until eterm is updated :)
 sorry kainx  :)
+
+-------------------------------------------------------------------------------
+
+Sat Oct  2 18:59:21 PDT 1999
+(Raster)
+
+needed to fix the iclass ipc stuff a bit to make it more useful in the long
+run
